p3/manifest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: dev
  name: will42
  labels:
    app: will42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: will42
  template:
    metadata:
      labels:
        app: will42
    spec:
      containers:
        - name: will42
          image: wil42/compile-subjects-42
          ports:
            - containerPort: 8888
      #     volumeMounts:
      #       - name: custom-html
      #         mountPath: /usr/share/nginx/html/index.html
      #         subPath: index.html
      # # volumes:
      #   - name: custom-html
      #     configMap:
      #       name: will42-config
      #       items:
      #         - key: index.html
      #           path: index.html
