p3/manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: will42-svc
  #namespace: dev
spec:
  selector:
    app: will42
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
