p3/manifest/networking.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will42-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  #namespace: dev
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: will42-svc
                port:
                  number: 8888
